convert to dotnet core 3.1

--- a/PSTParse/PSTParse.csproj
+++ b/PSTParse/PSTParse.csproj
@@ -1,135 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D8896CE5-BEFD-4F1F-9B7C-24A5ABDE5683}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSTParse</RootNamespace>
-    <AssemblyName>PSTParse</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ListsTablesPropertiesLayer\BTH.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHDataEntry.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHDataNode.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHDataRecord.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHHEADER.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHIndexAllocationRecords.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHIndexEntry.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\BTHIndexNode.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\EntryID.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HeapNodeBO.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HID.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HN.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNBITMAPHDR.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNBlock.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNDataDTO.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNHDR.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNID.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNPAGEHDR.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\HNPAGEMAP.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\MVPropVarBase.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\PCBTHRecord.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\ExchangeProperty.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\TableContext.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\TCINFOHEADER.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\TCOLDESC.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\TCRowMatrix.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\TCRowMatrixData.cs" />
-    <Compile Include="MessageLayer\Attachment.cs" />
-    <Compile Include="MessageLayer\AttachmentEnums.cs" />
-    <Compile Include="MessageLayer\IPMItem.cs" />
-    <Compile Include="MessageLayer\MailFolder.cs" />
-    <Compile Include="MessageLayer\MailStore.cs" />
-    <Compile Include="ListsTablesPropertiesLayer\PropertyContext.cs" />
-    <Compile Include="MessageLayer\Message.cs" />
-    <Compile Include="MessageLayer\MessageProperty.cs" />
-    <Compile Include="MessageLayer\MessagePropertyTypes.cs" />
-    <Compile Include="MessageLayer\NamedProperty.cs" />
-    <Compile Include="MessageLayer\NamedToPropertyLookup.cs" />
-    <Compile Include="MessageLayer\NAMEID.cs" />
-    <Compile Include="MessageLayer\PropType.cs" />
-    <Compile Include="MessageLayer\Recipient.cs" />
-    <Compile Include="MessageLayer\Recipients.cs" />
-    <Compile Include="NodeDatabaseLayer\BBTENTRY.cs" />
-    <Compile Include="NodeDatabaseLayer\BID.cs" />
-    <Compile Include="NodeDatabaseLayer\BlockBO.cs" />
-    <Compile Include="NodeDatabaseLayer\BlockDataDTO.cs" />
-    <Compile Include="NodeDatabaseLayer\BlockFactory.cs" />
-    <Compile Include="NodeDatabaseLayer\BlockTrailer.cs" />
-    <Compile Include="NodeDatabaseLayer\BREF.cs" />
-    <Compile Include="NodeDatabaseLayer\BTENTRY.cs" />
-    <Compile Include="NodeDatabaseLayer\BTPage.cs" />
-    <Compile Include="NodeDatabaseLayer\BTPAGEENTRY.cs" />
-    <Compile Include="NodeDatabaseLayer\DatatEncoder.cs" />
-    <Compile Include="NodeDatabaseLayer\IBLOCK.cs" />
-    <Compile Include="NodeDatabaseLayer\NBTENTRY.cs" />
-    <Compile Include="NodeDatabaseLayer\NID.cs" />
-    <Compile Include="NodeDatabaseLayer\NodeBTree.cs" />
-    <Compile Include="NodeDatabaseLayer\NodeDataDTO.cs" />
-    <Compile Include="NodeDatabaseLayer\PageTrailer.cs" />
-    <Compile Include="NodeDatabaseLayer\PSTBTree.cs" />
-    <Compile Include="NodeDatabaseLayer\PSTBTreeNode.cs" />
-    <Compile Include="NodeDatabaseLayer\SIBLOCK.cs" />
-    <Compile Include="NodeDatabaseLayer\SIENTRY.cs" />
-    <Compile Include="NodeDatabaseLayer\SLBLOCK.cs" />
-    <Compile Include="NodeDatabaseLayer\SLENTRY.cs" />
-    <Compile Include="NodeDatabaseLayer\SpecialNIDs.cs" />
-    <Compile Include="NodeDatabaseLayer\SubNodeDataDTO.cs" />
-    <Compile Include="NodeDatabaseLayer\XBLOCK.cs" />
-    <Compile Include="NodeDatabaseLayer\XXBLOCK.cs" />
-    <Compile Include="PSTEnums.cs" />
-    <Compile Include="PSTFile.cs" />
-    <Compile Include="PSTHeader.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PSTParser.cs" />
-    <Compile Include="PSTRoot.cs" />
-    <Compile Include="Utilities\ArrayUtilities.cs" />
-    <Compile Include="Utilities\CRC32.cs" />
-    <Compile Include="Utilities\RtfDecompressor.cs" />
-    <Compile Include="Utilities\Utilities.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
