--- a/PSTParse/PSTParse.csproj
+++ b/PSTParse/PSTParse.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net60</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.3.1</Version>
   </PropertyGroup>
 
 </Project>
