--- a/PSTParse/PSTParse.csproj
+++ b/PSTParse/PSTParse.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.1</Version>
+    <TargetFrameworks>net60;netstandard2.0</TargetFrameworks>
+    <Version>1.3.2</Version>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
